Update pom to pretty print test results